--- a/fi-pdflatex.tex
+++ b/fi-pdflatex.tex
@@ -215,12 +215,10 @@ Figure \ref{fig:structure1} displays the ternary structure of a protein consisti
   \label{fig:structure}
 \end{figure}
 
-\subsection{conformational isomerism}
+\subsection{Conformational isomers}
 \label{section:alternative_conformations}
 
-Conformational isomers, or alternative conformations, are different conformations of the same molecule. They can be used to represent different states of a molecule, such as different protonation states or different ligand binding modes. 
-
-Figure \ref{fig:alternative_conformations} shows two conformations of adenosine triphosphate. One conformation is colored in yellow, while the other is colored in blue.
+Conformational isomers, or alternative conformations, are different spatial arrangements of atoms within a molecule. \cite{conformational_isomerism} Figure \ref{fig:alternative_conformations} shows two conformational isomers of adenosine triphosphate. One conformation is colored yellow, while the other is colored blue.
 
 \begin{figure}[htbp]
   \begin{center}
