--- a/main.bib
+++ b/main.bib
@@ -157,6 +157,14 @@
   publisher = {John Wiley \& Sons}
 }
 
+% conformational isomerism
+@online{conformational_isomerism,
+  author  = {{Wikipedia contributors}},
+  title   = {Conformational isomerism},
+  url     = {https://en.wikipedia.org/wiki/Conformational_isomerism},
+  urldate = {2023-05-17}
+}
+
 @misc{schindler2021thesis,
   author = {Schindler, Ondřej},
   title  = {Parciální atomové náboje peptidů [online]},
