--- a/main.bib
+++ b/main.bib
@@ -1,11 +1,12 @@
 % racek doctoral thesis
-@misc{racek2022thesis,
+@phdthesis{racek2022thesis,
   author = {Raček, Tomáš},
-  title  = {Algorithms for calculating atomic charges [online]},
-  year   = {2016 [cit. 2023-05-16]},
-  type   = {Advanced Master's thesis},
-  school = {Masaryk University, Faculty of Informatics, Brno},
-  url    = {https://is.muni.cz/th/syz2d/}
+  title  = {Empirical methods for calculating partial atomic charges [online]},
+  year   = {2022 [cit. 2023-05-17]},
+  type   = {Disertační práce},
+  school = {Masarykova univerzita, Fakulta informatiky, Brno},
+  note   = {SUPERVISOR : Luděk Matyska},
+  url    = {https://is.muni.cz/th/gy8gf/}
 }
 
 % textbook on quantum chemistry
