--- a/main.bib
+++ b/main.bib
@@ -166,6 +166,7 @@
   urldate = {2023-05-17}
 }
 
+% partial atomic charges
 @misc{schindler2021thesis,
   author = {Schindler, Ondřej},
   title  = {Parciální atomové náboje peptidů [online]},
@@ -173,6 +174,50 @@
   type   = {Advanced Master's thesis},
   school = {Masaryk University, Faculty of Science, Brno},
   url    = {https://is.muni.cz/th/yzf1j/}
+}
+
+% pubchem psilocybine
+@online{pubchem_psilocybine,
+  author  = {{National Center for Biotechnology Information}},
+  title   = {PubChem Compound Summary for CID 10624, Psilocybine},
+  url     = {https://pubchem.ncbi.nlm.nih.gov/compound/Psilocybine},
+  urldate = {2023-05-17}
+}
+
+% sqe
+@article{nistor2006generalization,
+  title     = {A generalization of the charge equilibration method for nonmetallic materials},
+  author    = {Nistor, Razvan A and Polihronov, Jeliazko G and M{\"u}ser, Martin H and Mosey, Nicholas J},
+  journal   = {The Journal of chemical physics},
+  volume    = {125},
+  number    = {9},
+  pages     = {094108},
+  year      = {2006},
+  publisher = {American Institute of Physics}
+}
+
+% eem
+@article{mortier1986electronegativity,
+  title     = {Electronegativity-equalization method for the calculation of atomic charges in molecules},
+  author    = {Mortier, Wilfried J and Ghosh, Swapan K and Shankar, S},
+  journal   = {Journal of the American Chemical Society},
+  volume    = {108},
+  number    = {15},
+  pages     = {4315--4320},
+  year      = {1986},
+  publisher = {ACS Publications}
+}
+
+% qeq
+@article{rappe1991charge,
+  title     = {Charge equilibration for molecular dynamics simulations},
+  author    = {Rappe, Anthony K and Goddard III, William A},
+  journal   = {The Journal of Physical Chemistry},
+  volume    = {95},
+  number    = {8},
+  pages     = {3358--3363},
+  year      = {1991},
+  publisher = {ACS Publications}
 }
 
 @article{wojdyr2022gemmi,
