--- a/main.bib
+++ b/main.bib
@@ -220,6 +220,23 @@
   publisher = {ACS Publications}
 }
 
+% qtpie
+@article{qtpie,
+  title    = {PDBx/mmCIF Ecosystem: Foundational Semantic Tools for Structural Biology},
+  journal  = {Journal of Molecular Biology},
+  volume   = {434},
+  number   = {11},
+  pages    = {167599},
+  year     = {2022},
+  note     = {Computation Resources for Molecular Biology},
+  issn     = {0022-2836},
+  doi      = {https://doi.org/10.1016/j.jmb.2022.167599},
+  url      = {https://www.sciencedirect.com/science/article/pii/S0022283622001796},
+  author   = {John D. Westbrook and Jasmine Y. Young and Chenghua Shao and Zukang Feng and Vladimir Guranovic and Catherine L. Lawson and Brinda Vallat and Paul D. Adams and John M Berrisford and Gerard Bricogne and Kay Diederichs and Robbie P. Joosten and Peter Keller and Nigel W. Moriarty and Oleg V. Sobolev and Sameer Velankar and Clemens Vonrhein and David G. Waterman and Genji Kurisu and Helen M. Berman and Stephen K. Burley and Ezra Peisach},
+  keywords = {data standard, protein data bank (PDB), biological data, data management, macromolecular structure},
+  abstract = {PDBx/mmCIF, Protein Data Bank Exchange (PDBx) macromolecular Crystallographic Information Framework (mmCIF), has become the data standard for structural biology. With its early roots in the domain of small-molecule crystallography, PDBx/mmCIF provides an extensible data representation that is used for deposition, archiving, remediation, and public dissemination of experimentally determined three-dimensional (3D) structures of biological macromolecules by the Worldwide Protein Data Bank (wwPDB, wwpdb.org). Extensions of PDBx/mmCIF are similarly used for computed structure models by ModelArchive (modelarchive.org), integrative/hybrid structures by PDB-Dev (pdb-dev.wwpdb.org), small angle scattering data by Small Angle Scattering Biological Data Bank SASBDB (sasbdb.org), and for models computed generated with the AlphaFold 2.0 deep learning software suite (alphafold.ebi.ac.uk). Community-driven development of PDBx/mmCIF spans three decades, involving contributions from researchers, software and methods developers in structural sciences, data repository providers, scientific publishers, and professional societies. Having a semantically rich and extensible data framework for representing a wide range of structural biology experimental and computational results, combined with expertly curated 3D biostructure data sets in public repositories, accelerates the pace of scientific discovery. Herein, we describe the architecture of the PDBx/mmCIF data standard, tools used to maintain representations of the data standard, governance, and processes by which data content standards are extended, plus community tools/software libraries available for processing and checking the integrity of PDBx/mmCIF data. Use cases exemplify how the members of the Worldwide Protein Data Bank have used PDBx/mmCIF as the foundation for its pipeline for delivering Findable, Accessible, Interoperable, and Reusable (FAIR) data to many millions of users worldwide.}
+}
+
 @article{wojdyr2022gemmi,
   doi       = {10.21105/joss.04200},
   url       = {https://doi.org/10.21105/joss.04200},
